--- a/app/views/partials/_header.html.slim
+++ b/app/views/partials/_header.html.slim
@@ -15,6 +15,8 @@ header.header style="#{'display: none;' if params[:action] == 'new_purchase' || 
           li
             = link_to 'Contato', 'mailto:tribo@triboviva.com.br?subject=Olá Tribo Viva!', title: 'Envie um email para a Tribo Viva'
           li
+            = link_to 'Produtores', producers_path, title: 'Produtores'
+          li
             = link_to 'Entregas', delivery_path, title: 'Entregas'
 
           - if user_signed_in?
