Adds style to purchase modal

--- a/app/assets/stylesheets/base/_utility.scss
+++ b/app/assets/stylesheets/base/_utility.scss
@@ -150,8 +150,20 @@
   color: $brown-medium;
 }
 
+.u-textBrownDark {
+  color: $brown-dark;
+}
+
 .u-textYellow {
   color: $yellow-medium;
+}
+
+.u-textRed {
+  color: $error;
+}
+
+.u-textGreen {
+  color: $green-light;
 }
 
 // # Misc
