Fixes duplicated modal

--- a/app/views/offers/add_to_cart.js.erb
+++ b/app/views/offers/add_to_cart.js.erb
@@ -1,1 +1,1 @@
-$('.modal-content').append("<%= escape_javascript(render 'add_to_cart', errors: @errors) %>");
+$('.modal-content').html("<%= escape_javascript(render 'add_to_cart', errors: @errors) %>");
