--- a/app/views/purchases/index.html.slim
+++ b/app/views/purchases/index.html.slim
@@ -6,7 +6,7 @@ h1 Minhas compras
       tr
         th = purchase.invoice_id
         th = purchase.created_at
-        th = PurchaseStatus.t purchase.status
+        th = purchase.status_humanize
         th = purchase.total_with_taxes
       - purchase.orders.each do |order|
         tr
