--- a/app/views/producers/show.html.slim
+++ b/app/views/producers/show.html.slim
@@ -5,20 +5,19 @@ section.producer-info
   .container
     .row
       .col-sm-12.col-md-10.col-centered
-        .col-sm-2.col-md-2.pull-right
-          = link_to 'VOLTAR', :back, class: 'btn btn--md btn--block btn--brown-alt'
+        = link_to 'VOLTAR', :back, class: 'btn btn--md btn--brown-alt pull-right'
     .row
       .col-sm-12.col-md-10.col-centered
         .row
           .col-sm-6.col-md-8
-            h1#producer-name.u-textUp = @producer.name
+            h1#producer-name.u-textUp.u-marginBot5 = @producer.name
             span.glyphicon.glyphicon-map-marker
             span.address = @producer.address
     .row
       .col-sm-12.col-md-10.col-centered
         .row
           .col-sm-6.col-md-8
-            .offer-info__products
+            .offer-info__products.u-marginBot80
 
               h2.title--up.text--green Quem somos
               p = simple_format(@producer.description)
@@ -28,7 +27,7 @@ section.producer-info
               .clearfix
               - if @producer.video_url.present?
                 iframe.youtube-embedded width="100%" height="380" src="#{@producer.video_url}" frameborder="0" allowfullscreen
-          
+
           .col-sm-6.col-md-4
             h2.title--up.text--green Contato
             iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="100%" height="200" src="https://maps.google.com/maps?hl=en&q=#{@producer.address}&ie=UTF8&t=m&z=6&iwloc=B&output=embed">
@@ -44,4 +43,3 @@ section.producer-info
                     - if @producer.website.present?
                       span.fa.fa-mouse-pointer.u-textBrownMedium
                       = link_to @producer.website, "http://#{@producer.website}", target: "_blank"
-
