Improves my purchases page

--- a/app/views/pages/cart.html.slim
+++ b/app/views/pages/cart.html.slim
@@ -52,7 +52,7 @@ section.cart
             h1.title--up.text--yellow.text-center Não há produtos no seu carrinho
             br
             .col-sm-6.col-centered
-              = link_to 'Ver Ofertas', root_path, class: 'btn btn--md btn--yellow btn--block'
+              = link_to 'Ver Ofertas da Semana', root_path, class: 'btn btn--md btn--yellow btn--block'
           br
           br
           br
