Change description on Facebook tags on offer show

--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -1,4 +1,4 @@
-- meta og: { title: "Tribo Viva - #{@offer.title}", description: "#{strip_tags @offer.description}",
+- meta og: { title: "Tribo Viva - #{@offer.title}", description: "#{strip_tags @offer.deliver_coordinator.partial_address}",
              url: request.url, image: @offer.image.url }
 
 #fb-root
