Change courier name and info

--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -128,21 +128,18 @@ section.offer-info
                 .widget__info__producer
                   .widget__delivery__icon
                     .fa.fa-bicycle.u-textCenter
-                  h4.widget__producer__name.text--yellow TELEBIKE
-                  p
-                    span.fa.fa-user.u-textBrownMedium
-                    |  JOÃO RUIZ
-                    br
+                  h4.widget__producer__name.text--yellow VELO
+                  p.text--white
                     span.fa.fa-phone.u-textBrownMedium
-                    |  (51) 9136-0348
+                    |  (51) 8332-3232
                     br
                     span.fa.fa-clock-o.u-textBrownMedium
-                    |  SEG a SÁB
+                    |  SEG a SEX
                     br
                     span.fa.fa-map-marker.u-textBrownMedium
                     |  não cobre a Zona Sul de POA
                     br
-                    = link_to 'Confira a Fan Page', 'https://www.facebook.com/TeleBikeEntregas', target: '_blank', class: 'text--yellow'
+                    = link_to 'Confira a Fan Page', 'https://www.facebook.com/couriervelo', target: '_blank', class: 'text--yellow'
                   hr.u-borderBrownMedium
                   h4.widget__producer__name.text--yellow  EcoBike Courier
                   p.text--white
