--- a/app/views/pages/delivery.html.slim
+++ b/app/views/pages/delivery.html.slim
@@ -3,30 +3,29 @@
     .row
       .col-sm-12.col-md-9.col-centered
         .form.brown-dark
-          h1.title--up.text--yellow CONTATE NOSSOS PARCEIROS E COMBINE SUA ENTREGA!          
+          h1.title--up.text--yellow CONTATE NOSSOS PARCEIROS E COMBINE SUA ENTREGA!
           h3.title--up.text--brown__light PARCEIROS ENTREGADORES*
           .row
             .col-sm-3.col-md-2
-              = image_tag('logo-telebike.png', class: 'u-marginTop25')
+              = image_tag('logo-velo.png', class: 'u-marginTop25')
             .col-sm-9.col-md-10
-              h3.text--yellow TELEBIKE
+              h3.text--yellow VELO
               p.text--white
-                | CONTATO: JOÃO RUIZ
                 br
-                | CEL.: (51) 9136-0348 (de segunda-feira a sábado / não cobre a Zona Sul de POA).
+                | CEL.: (51) 8332-3232 (de segunda-feira a sexta / não cobre a Zona Sul de POA).
                 br
-                | FACEBOOK: 
-                = link_to 'https://www.facebook.com/TeleBikeEntregas', 'https://www.facebook.com/TeleBikeEntregas', target: '_blank'
+                | FACEBOOK:
+                = link_to 'https://www.facebook.com/couriervelo', 'https://www.facebook.com/couriervelo', target: '_blank'
             .col-sm-3.col-md-2
               = image_tag('logo-ecobike.png', class: 'u-marginTop15')
             .col-sm-9.col-md-10
               h3.text--yellow EcoBike Courier
               p.text--white
-                | CONTATO: VICTÓRIA MELGAREJO 
+                | CONTATO: VICTÓRIA MELGAREJO
                 br
                 | TEL.: (51) 3016-8770 (de segunda-feira a sexta-feira / cobre todas as regiões de POA).
                 br
-                | SITE: 
+                | SITE:
                 = link_to 'http://www.ecobikecourier.com.br/', 'http://www.ecobikecourier.com.br/', target: '_blank'
           hr
           p.text--white.small * A Tribo Viva indica estes parceiros entregadores por sua reputação e competência comprovada na prestação de serviços de entrega. No momento da contratação dos serviços destes parceiros, informe a sua participação na Rede de Consumo Colaborativo da Tribo Viva para obter atendimento e condições específicas.
