Change layout of Offer table

--- a/app/assets/stylesheets/organisms/_offer-info.scss
+++ b/app/assets/stylesheets/organisms/_offer-info.scss
@@ -44,6 +44,11 @@
   }
 }
 
+.offer-info__unit__price {
+  color: $brown-medium;
+  font-size: 0.8em;
+}
+
 // # Collect
 // # =================================================================
 .offer-info__collect {
