--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -59,18 +59,16 @@ section.offer-info
                 .table-responsive
                   table.table.table-brown-light
                     tr
-                      th.text--green Nome
-                      th.text--green Quantidade
-                      th.text--green Preço Un.
-                      th.text--green Total
+                      th.text--green Produto
+                      th.text--green Valor
                     - @offer.offer_items.each do |item|
                       tr
-                        td = item.name
                         td
-                          span
-                            | #{number_with_precision item.quantity, strip_insignificant_zeros: true, precision: 2} #{item.unit_humanize}
-                        td = number_to_currency item.unit_price
-                        td = number_to_currency item.total
+                          = item.name
+                          br
+                          span.offer-info__unit__price #{number_to_currency(item.unit_price)} por #{item.unit_humanize.downcase}
+                        td
+                          | #{number_to_currency(item.total)} / #{number_with_precision item.quantity, strip_insignificant_zeros: true, precision: 2} #{item.unit_humanize.downcase.pluralize(item.quantity)}
               p = simple_format @offer.description
 
             .offer-info__collect
