Fix some mailers corrections

--- a/app/views/remembers/deliver_coordinator.html.slim
+++ b/app/views/remembers/deliver_coordinator.html.slim
@@ -48,9 +48,9 @@ hr
 h2 PARCEIRO DE ENTREGAS
 
 p
-  | A Tribo Viva conta com um parceiro de entregas, caso você necessite de um.
+  | Nossos parceiros de entrega podem aparecer para coletar uma ou mais cestas de cotistas da oferta.
   br
-  | Para mais informações, clique #{link_to 'aqui', delivery_url}.
+  | Caso você tenha alguma dúvida, clique #{link_to 'aqui', delivery_url} e veja seus contatos.
 
 h2 Dúvidas?
 
