--- a/app/views/remembers/deliver_coordinator.text.erb
+++ b/app/views/remembers/deliver_coordinator.text.erb
@@ -30,8 +30,8 @@ Cotistas (<%= @purchases.select(:user_id).count %> pessoas):
 
 PARCEIRO DE ENTREGAS
 
-A Tribo Viva conta com um parceiro de entregas, caso você necessite de um.
-Para mais informações, visite <%= delivery_url %>.
+Nossos parceiros de entrega podem aparecer para coletar uma ou mais cestas de cotistas da oferta.
+Caso você tenha alguma dúvida, visite <%= delivery_url %> e veja seus contatos.
 
 DÚVIDAS?
 
