--- a/app/assets/stylesheets/organisms/_form.scss
+++ b/app/assets/stylesheets/organisms/_form.scss
@@ -4,7 +4,7 @@ html, body {
 
 .form {
   width: 100%;
-  padding: 20px 40px 60px 40px;
+  padding: 20px 40px 50px 40px;
 
   &.half-size {
     width: 50%;
@@ -44,7 +44,7 @@ html, body {
   }
 
   .form-group {
-    margin-bottom: 0;
+    margin-bottom: 10px;
   }
 
   .form-actions {
@@ -69,4 +69,8 @@ html, body {
   padding: 80px 0 80px 0;
   background-color: $brown-medium;
   min-height: 100%;
+}
+
+.devise-links {
+  margin-top: 30px;
 }
