--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -7,24 +7,45 @@ section.users
 
           = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
             .form-inputs
-              = f.input :name, required: true, autofocus: true, placeholder: 'Seu nome completo', title: 'Seu nome completo'
-              = f.input :email, required: true, placeholder: 'exemplo@email.com', title: 'Seu email de contato'
+              = f.input :name,
+                required: true,
+                autofocus: true,
+                placeholder: 'Francisca Edwiges Neves Gonzaga'
+              = f.input :nickname,
+                required: true,
+                autofocus: true,
+                placeholder: 'Chiquinha'
+              = f.input :email,
+                required: true,
+                placeholder: 'chiquinha@gmail.com'
               .row
                 .col-sm-6
-                  = f.input :cpf, required: true, title: 'Seu CPF', input_html: { class: 'js-cpf' }
-                  .hint.text--brown__medium Necessário para emissão da NF
+                  = f.input :cpf,
+                    required: true,
+                    input_html: { class: 'js-cpf' }
+                  .hint.text--brown__medium Para emissão de notas fiscais
                 .col-sm-6
-                  = f.input :phone, required: true, label: 'Celular', title: 'Celular para contato', input_html: { class: 'js-phone' }
-                  .hint.text--brown__medium Utilizado para avisos de coleta e emergências
-              = f.input :address, required: true, label: 'Endereço completo', placeholder: 'Endereço completo', title: 'Seu endereço completo'
-              .hint.text--brown__medium Necessário para emissão da NF
+                  = f.input :phone,
+                    required: true,
+                    input_html: { class: 'js-phone' }
+                  .hint.text--brown__medium Para possíveis avisos de última hora
+              = f.input :address,
+                required: true,
+                placeholder: 'Rua Cabral, 301 - Porto Alegre, RS'
+              .hint.text--brown__medium Para emissão de notas fiscais
               .row
                 .col-sm-6
-                  = f.input :password, required: true, hint: ("mínimo de #{@minimum_password_length} caracteres" if @minimum_password_length), label: 'Sua senha', title: 'Sua senha'
+                  = f.input :password,
+                    required: true,
+                    minlength: @minimum_password_length
+                  .hint.text--brown__medium = "Mínimo de #{@minimum_password_length} caracteres" if @minimum_password_length
                 .col-sm-6
-                  = f.input :password_confirmation, required: true, label: 'Repita a senha', title: 'Repita sua senha'
+                  = f.input :password_confirmation,
+                    required: true
 
             .form-actions
-              = f.button :submit, "Cadastrar", class: 'btn btn--md btn--block btn--yellow', title: 'Cadastrar'
+              = f.button :submit,
+                'Cadastrar',
+                class: 'btn btn--md btn--block btn--yellow'
 
-          = render "devise/shared/links"
+          = render 'devise/shared/links'  
