--- a/app/assets/stylesheets/organisms/_offer-header.scss
+++ b/app/assets/stylesheets/organisms/_offer-header.scss
@@ -4,7 +4,10 @@
   @media screen and (max-width: 767px) { padding: 24px 0 70px 0; }
   @media screen and (min-width: 768px) { padding: 80px 0 70px 0; }
 
-  .offer__header__title { margin-bottom: 5px; }
+  .offer__header__title {
+    margin-bottom: 5px;
+    margin-top: -4px;
+  }
 }
 
 .offer__header__image {
