Use "e-mail" when using Portuguese term

--- a/app/views/checkouts/transfer.html.slim
+++ b/app/views/checkouts/transfer.html.slim
@@ -18,7 +18,7 @@ section.purchase
               ul.small.instructions
                 li Imprima o comprovante
                 li Tire uma foto do mesmo com seu celular.
-                li Abra o email que você recebeu da Tribo Viva (chamado de "Pague sua compra e envie o comprovante") e clique no link de confirmação
+                li Abra o e-mail que você recebeu da Tribo Viva (chamado de "Pague sua compra e envie o comprovante") e clique no link de confirmação
                 li Em "Anexe o Comprovante de Pagamento" Clique no botão "Selecionar arquivo"
                 li Selecione a foto do comprovante
                 li Clique no botão "Finalizar Compra" para enviá-lo.
