--- a/app/views/partials/_footer.html.slim
+++ b/app/views/partials/_footer.html.slim
@@ -19,4 +19,4 @@ footer.footer
                 li
                   = link_to 'Termos de Compras', terms_path, title: 'Termos de Compras'
                 li
-                  = link_to 'Contato', 'mailto:tribo@triboviva.com.br?subject=Olá Tribo Viva!', title: 'Mande um email para nós'
+                  = link_to 'Contato', 'mailto:tribo@triboviva.com.br?subject=Olá Tribo Viva!', title: 'Mande um e-mail para nós'
