--- a/app/views/purchase_mailer/confirmed_payment.html.slim
+++ b/app/views/purchase_mailer/confirmed_payment.html.slim
@@ -22,7 +22,7 @@ ul
     li DATA E HORÁRIO: #{order.offer.delivery_time_range}
     li LOCAL: #{order.offer.deliver_coordinator.address}
     li TELEFONE: #{order.offer.deliver_coordinator.phone}
-    li EMAIL: #{order.offer.deliver_coordinator.email}
+    li E-MAIL: #{order.offer.deliver_coordinator.email}
     br
     br
 
@@ -36,4 +36,4 @@ hr
 h3
   strong  SUGESTÕES OU DÚVIDAS?
 
-p Envie email para #{mail_to 'tribo@triboviva.com.br'}
+p Envie e-mail para #{mail_to 'tribo@triboviva.com.br'}
