--- a/app/views/purchase_mailer/pending_transfer_payment.html.slim
+++ b/app/views/purchase_mailer/pending_transfer_payment.html.slim
@@ -62,5 +62,5 @@ ul
 hr
 h3
   strong  SUGESTÕES OU DÚVIDAS?
-p Envie email para #{mail_to 'tribo@triboviva.com.br'}
+p Envie e-mail para #{mail_to 'tribo@triboviva.com.br'}
 hr
