--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -3,7 +3,7 @@ h1.title--up.text--yellow Esqueceu sua senha?
 = simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
   = f.error_notification
   .form-inputs
-    = f.input :email, required: true, autofocus: true, placeholder: 'exemplo@email.com', title: 'Seu email de cadastro'
+    = f.input :email, required: true, autofocus: true, placeholder: 'exemplo@email.com', title: 'Seu e-mail de cadastro'
   .form-actions
     = f.button :submit, "Trocar Senha", class: 'btn btn--md btn--block btn--yellow', title: 'Trocar senha'
 
