--- a/app/views/partials/_header.html.slim
+++ b/app/views/partials/_header.html.slim
@@ -13,7 +13,7 @@ header.header
           li
             = link_to 'como funciona', about_path, title: 'Como funciona a Tribo Viva'
           li
-            = link_to 'contato', 'mailto:tribo@triboviva.com.br?subject=Olá Tribo Viva!', title: 'Envie um email para a Tribo Viva'
+            = link_to 'contato', 'mailto:tribo@triboviva.com.br?subject=Olá Tribo Viva!', title: 'Envie um e-mail para a Tribo Viva'
           li
             = link_to 'entregas', delivery_path, title: 'Entregas'
           li
